<resources>
    <string name="language_prompt">Choose a language</string>
    <string-array name="language_options">
        <item>English (United States)</item>
        <item>Portuguese (Brazil)</item>
        <item>Spanish (Spain)</item>
    </string-array>
    <string name="app_name">AppEversee</string>
    <string name="txt_login">Login</string>
    <string name="txt_password">Password</string>
    <string name="btn_enter">Enter</string>
    <string name="lnk_forgot_password">Forgot password?</string>
    <string name="msg_login_error">Login field not filled up</string>
    <string name="msg_password_error">Password field not filled up</string>

    <string name="when_mobile_data">When using mobile data</string>
    <string name="configuration_title">Settings</string>
    <string name="audio">Audio</string>
    <string name="database">Database</string>
    <string name="picture">Picture</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select_language">Select language</string>
    <string name="opt_english">English</string>
    <string name="opt_portuguese">Portuguese</string>
    <string name="opt_spanish">Spanish</string>
</resources>
