<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/when_mobile_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="14dp" android:layout_marginStart="28dp" android:textStyle="bold"
            android:textColor="@android:color/background_dark"/>
    <CheckBox
            android:text="@string/audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkboxAudio" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="14dp" android:layout_marginStart="28dp"
            android:textColorLink="@android:color/holo_orange_dark"/>
    <CheckBox
            android:text="@string/database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkboxDB" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/chkboxAudio" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="14dp" android:layout_marginStart="28dp"
            android:textColorLink="@android:color/holo_orange_dark"/>
    <CheckBox
            android:text="@string/picture"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:id="@+id/chkboxPicture" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/chkboxDB" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="14dp" android:layout_marginStart="28dp"
            android:textColorLink="@android:color/holo_orange_dark"/>
    <CheckBox
            android:text="@string/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkboxVideo" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/chkboxPicture" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="14dp" android:layout_marginStart="28dp"
            android:textColorLink="@android:color/holo_orange_dark"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfigCancel" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/chkboxVideo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="80dp" android:layout_marginStart="112dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="@color/colorPrimaryDark" android:background="?attr/colorBackgroundFloating"/>
    <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnConfigOK"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/chkboxVideo"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="@color/colorPrimaryDark" android:background="?attr/colorBackgroundFloating"
            app:layout_constraintStart_toEndOf="@+id/btnConfigCancel" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>