<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/select_language"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/textView" android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textStyle="bold"
            android:textColor="@android:color/background_dark"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:id="@+id/btnConfigCancelI"
            android:textColor="@color/colorPrimaryDark" android:background="?attr/colorBackgroundFloating"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/rdoLanguages" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:id="@+id/btnConfigOKI"
            android:textColor="@color/colorPrimaryDark" android:background="?attr/colorBackgroundFloating"
            app:layout_constraintStart_toEndOf="@+id/btnConfigCancel"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.203"
    />

    <RadioGroup
            android:layout_width="125dp"
            android:layout_height="138dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:id="@+id/rdoLanguages">
        <!--app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"-->
        <![CDATA[
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>

        ]]>
        <RadioButton
                android:text="@string/opt_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdoEnglish" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/opt_portuguese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdoPortugues" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/opt_spanish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rdoSpanish" android:layout_weight="1"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>