<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="205dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtLogin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="120dp"
            app:layout_constraintHorizontal_bias="0.503" android:hint="@string/txt_login"
            android:textColorLink="@android:color/background_light"/>
    <EditText
            android:layout_width="205dp"
            android:layout_height="39dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.503" android:hint="@string/txt_password" android:singleLine="true"
            android:selectAllOnFocus="true" android:textColorLink="@android:color/background_light"/>
    <Button
            android:text="@string/btn_enter"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/lnk_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lnkForgotPassword" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>